--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "django-widget-tweaks>=1.5.0",
     "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
+    "inertia-django>=1.2.0",
     "psycopg2-binary>=2.9.10",
     "requests>=2.32.4",
     "ruff>=0.12.2",
